#7 .format(), asset-analytics.jar